--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -26,25 +26,17 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
-                                <span class="sr-only">(current)</span>
+                                <a class="nav-link" href="/news/">Главная
+
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about/">About</a>
+                            <a class="nav-link" href="/news/create/">Создать новость</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacts/">Contact</a>
+                            <a class="nav-link" href="/news/search/">Поиск</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/page1/">Page1</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/page2/">Page2</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/page3/">Page3</a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
