--- a/templates/article_create.html
+++ b/templates/article_create.html
@@ -1,7 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
 {% block content %}
-<h1>Создать Новость</h1>
+<h1>Создать Статью</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
