--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -26,12 +26,15 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item active">
-                                <a class="nav-link" href="/news/">Главная
+                                <a class="nav-link" href="{% url 'post_list' %}">Главная
 
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/news/create/">Создать новость</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="/article/create/">Создать статью</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/news/search/">Поиск</a>
