--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,15 +1,12 @@
 {% extends 'flatpages/default.html' %}
 
 {% block content %}
-<h1>Создать Новость</h1>
+<h1>Удаление Новости</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
+    <p>Удаляем "{{ object.title }}"?</p>
 
-    {{ form.as_p }}
-
-
-
-    <input type="submit" value="Save"  />
+    <input type="submit" value="Delete" />
 </form>
 {% endblock content %}
