--- a/templates/one_news.html
+++ b/templates/one_news.html
@@ -23,5 +23,6 @@ Post
 <hr>
 <a class="nav-link" href="/news/{{news.id}}/delete/">Удалить</a>
 <a class="nav-link" href="{{news.id}}/edit/">Редактировать</a>
+<button> <a href="logout/">Выйти</a> </button>
 
 {% endblock content %}
