--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -16,7 +16,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
             <div class="container">
-<!--                <a class="navbar-brand" href="#page-top">Django flatpages</a>-->
+                <a class="navbar-brand" href="#page-top">{{request.user.username}}</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarResponsive"
                         aria-controls="navbarResponsive" aria-expanded="false"
@@ -38,6 +38,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/news/search/">Поиск</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="/accounts/login/">Войти</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="/logout/">Выйти</a>
                         </li>
 
                     </ul>
