--- a/templates/news_economy.html
+++ b/templates/news_economy.html
@@ -11,7 +11,7 @@ Post
 
 {% block content %}
 {% load censure %}
-    <h1>Всего Новостей: {{ all.all |length }} </h1>
+    <h1>Всего Новостей: {{ all |length }} </h1>
 {% if is_not_author %}
 <button> <a href="upgrade/"> Стать автором!</a> </button>
 {% endif %}
@@ -30,10 +30,9 @@ Post
             <tr>
                 <td>{{ news.author.user_author.first_name }}</td>
                 <td>{{ news.title | censor }}</td>
-                <td><a href="{% url 'post_category_list' %}">{% for category in news.categories.all %}
+                <td>{%  for category in news.categories.all %}
                         {{category}}
-                    {% endfor %}</a>
-                </td>
+                    {% endfor %}</td>
                 <td>{{ news.time_in_comment |date:'j m Y'  }}</td>
                 <td>{{ news.post_text |truncatewords:20 | censor }}</td>
             </tr>
