--- a/templates/news_category.html
+++ b/templates/news_category.html
@@ -66,5 +66,8 @@ Post
            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
        {% endif %}
    {% endif %}
+<hr>
+<button> <a href="subscribe/"> Подписаться на категорию!</a> </button>
+
 
 {% endblock content %}
