--- a/templates/news.html
+++ b/templates/news.html
@@ -34,7 +34,9 @@ Post
                        <a href="{% url 'category_list' category.id %}" >{{category}}</a>
                     {% endfor %}
                 </td>
-                <td>{{ news.time_in_comment |date:'j m Y'  }}</td>
+                <td>{{ news.time_in_comment |date:'j m Y'  }}
+
+                </td>
                 <td>{{ news.post_text |truncatewords:20 | censor }}</td>
             </tr>
             {% endfor %}
