--- a/templates/news_category.html
+++ b/templates/news_category.html
@@ -77,5 +77,5 @@ Post
 {% if not is_not_subscriber %}
 <button> <a href="unsubscribe"> Отписаться от категории!</a></button>
     {% endif %}
-
+{{ email }}
 {% endblock content %}
