--- a/templates/daily_post.html
+++ b/templates/daily_post.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <h2>Здравствуй! Новые статьи за последнюю неделю!</h2>
-<ul>
-  {% for post in posts %}
-  <li><a href="{{ link }}{{ post.get_absolute_url }}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
+<!--<ul>-->
+<!--  {% for post in posts %}-->
+<!--  <li><a href="{{ link }}{{ post.get_absolute_url }}">{{ post.title }}</a></li>-->
+<!--  {% endfor %}-->
+<!--</ul>-->
 </body>
 </html>
